Bug 692750: have gdevwpr2 "manage" device icc profiles

gdevwpr2 is one of the rare devices that can change its color space during its
lifetime. Such devices need to "manage" their device ICC profiles directly.

As the cups device is similar, these changes are loosely based on the
analogous part of gdevcups.c.

No cluster differences.